# polymarket-agent

./: .gitignore  ARCHITECTURE.md  COMPLETE_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  ENHANCED_STRATEGIES.md  ENHANCEMENT_SUMMARY.md  LAYER0-PLAN.md  LICENSE  PRODUCTION_BACKTEST_RESULTS.md  README.md  README_v2.md  docker-compose.yml  realistic_trades.txt  realistic_trades_generator.rs  telegram_trades.txt  telegram_trades_generator.rs
backtest/src/: production_backtest.rs
common/: Cargo.toml
common/src/: lib.rs
data-ingestion/: Cargo.toml
data-ingestion/src/: event_bus.rs  lib.rs  main.rs
data-ingestion/src/connectors/: gdelt.rs  mod.rs  polymarket.rs
data-ingestion/src/databases/: graph.rs  mod.rs  timeseries.rs  vector.rs
execution/: Cargo.toml
monitoring/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md
monitoring/examples/: ab_testing.rs  drift_detection.rs
monitoring/src/: ab_testing.rs  attribution.rs  calibration.rs  drift_detection.rs  lib.rs  main.rs  metrics.rs  resolution.rs  shadow_mode.rs
paper_trading/: README_PAPER_TRADING.md  monitoring.rs  paper_trading.rs  paper_trading_main.rs
portfolio-risk/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md
portfolio-risk/examples/: basic_usage.rs  risk_config.toml
portfolio-risk/src/: config.rs  lib.rs  metrics.rs  portfolio.rs  risk.rs
research-agents/: Cargo.toml  README.md
research-agents/examples/: demo.rs
research-agents/src/: agent.rs  bus.rs  lib.rs  orchestrator.rs  sentiment.rs
signal-generation/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md
signal-generation/examples/: spread_arbitrage_example.rs  spread_arbitrage_success.rs
signal-generation/src/: correlation.rs  kelly.rs  lib.rs  market_making.rs  pair_cost_arbitrage.rs  pipeline.rs  signals.rs  spread_arbitrage.rs  storage.rs  validators.rs
signal-generation/src/signals/: spread_arbitrage.rs
