[package]
name = "data-ingestion"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

common = { path = "../common" }

# Polymarket
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-webpki-roots"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
futures-util = "0.3"

# Event Bus
rdkafka = { version = "0.36", features = ["cmake-build"] }

# Database clients
qdrant-client = "1.11"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
neo4rs = "0.9.0-rc.9"
