[package]
name = "execution"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# CLOB client
rs-clob-client = { git = "https://github.com/Polymarket/rs-clob-client", version = "0.1.0" }

# Additional dependencies
rust_decimal = { version = "1.36", features = ["serde"] }
async-trait = "0.1"
thiserror = "1.0"
reqwest = { version = "0.12", features = ["json"] }
ethers = { version = "2.0", features = ["abigen"] }
futures = "0.3"
dashmap = "5.5"
