[package]
name = "portfolio-risk"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

common = { path = "../common" }

# Statistical calculations
statrs = "0.16"

# Configuration
config = "0.14"
toml = "0.8"

# Decimal precision (important for financial calculations)
rust_decimal = { version = "1.35", features = ["serde"] }
rust_decimal_macros = "1.35"
